--- a/templates/books/edit.html
+++ b/templates/books/edit.html
@@ -20,7 +20,7 @@
 
     <select name="author_id" id="author_id">
         {% for author in all_authors %}
-        <option value="{{author.full_name()}}" 
+        <option value="{{author.id}}" 
         {% if book.author.id == author.id %} selected = "selected" {% endif %}>
         {{author.full_name()}}  
         </option>
